--- a/src/app/blog/posts/comment/comment.component.scss
+++ b/src/app/blog/posts/comment/comment.component.scss
@@ -14,9 +14,39 @@
     border-bottom: none;
     padding: 0 15px;
     color: $grey_color;
-  }
-  .date-item {
-    margin-left: auto;
+    .date-item {
+      margin-left: auto;
+      margin-right: 7px;
+    }
+    .action-wrapper {
+      display: flex;
+      align-items: center;
+       .close-icon {
+        width: 11px;
+        height: 11px;
+        margin-left: 7px;
+        cursor: pointer;
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+      .cta {
+        border: none;
+        font-family: 'goudy_old_stylebold_italic';
+        font-size: 14px;
+        cursor: pointer;
+        background-color: transparent;
+        display: flex;
+        align-items: center;
+        &:hover .pencil-icon {
+          transform: scale(1.1);
+        }
+        .pencil-icon {
+          width: 15px;
+          height: 15px;
+        }
+      }
+    }
   }
   .comment-body {
     display: flex;
@@ -28,25 +58,6 @@
     padding: 5px 10px 5px 15px;
     min-height: 35px;
     overflow: hidden;
-    .cta {
-      border: 1px solid black;
-      border-radius: 4px;
-      font-family: 'goudy_old_stylebold_italic';
-      margin-left: auto;
-      font-size: 14px;
-      cursor: pointer;
-      background-color: #eee;
-      display: flex;
-      align-items: center;
-      .pencil-icon {
-        width: 15px;
-        height: 15px;
-        margin-right: 3px;
-        &:hover {
-          transform: scale(1.1);
-        }
-      }
-    }
   }
   .edit-input-wrapper {
     height: 40px;
@@ -75,15 +86,6 @@
       color: white;
     }
   }
-  .close-icon {
-    width: 11px;
-    height: 11px;
-    margin-left: 7px;
-    cursor: pointer;
-    &:hover {
-      transform: scale(1.1);
-    }
-  }
 }
 
 @media screen and (max-width: 576px) {
@@ -92,15 +94,23 @@
       flex-direction: column;
       height: 50px;
       position: relative;
-    }
-    .date-item {
-      font-size: 14px;
-      margin: 0 auto;
-    }
-    .close-icon {
-      position: absolute;
-      top: 7px;
-      right: 10px;
+      .action-wrapper {
+        position: absolute;
+        top: 7px;
+        right: 10px;
+        flex-direction: column;
+        .close-icon {
+          margin-left: 0;
+          margin-bottom: 5px;
+        }
+        .cta {
+          padding: 0;
+        }
+      }
+      .date-item {
+        font-size: 14px;
+        margin: 0 auto;
+      }
     }
   }
 }
