--- a/src/app/blog/posts/post-details/post-details.component.html
+++ b/src/app/blog/posts/post-details/post-details.component.html
@@ -13,7 +13,7 @@
     <div [ngClass]="{show: displayComments, hide: !displayComments}">
       <div class="info-message" *ngIf="comments.length == 0">There are no comments yet</div>
       <ng-container *ngIf="comments.length !== 0">
-        <app-comment *ngFor="let comment of comments" [comment]="comment" [comments]="comments" [post]="post"></app-comment>
+        <app-comment (onDeleteComment)="onDeleteComment($event)" *ngFor="let comment of comments" [comment]="comment" [comments]="comments" [post]="post"></app-comment>
       </ng-container>
       <hr>
       <div class="input-wrapper" *ngIf="isAddCommentAllowed()">
@@ -32,6 +32,7 @@
 <div class="modal-footer details-modal-footer">
   <div class="post-nav">
     <div class="arrow-left" (click)="previousPost()" [ngClass]="{'not-active': modalIndex == 0}"></div>
+    <div class="line">|</div>
     <div class="arrow-right" (click)="nextPost()" [ngClass]="{'not-active': modalIndex == postsIds.length - 1}"></div>
     <a class="edit-post" (click)="onEditPost()" *ngIf="isEditPostAllowed()">Edit post</a>
   </div>
