--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,20 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light ">
   <a class="nav-link" href="#">
-  	<div class="logo-icon"></div>
+    <div class="logo-icon"></div>
   </a>
-  <button class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          [attr.aria-expanded]="!isCollapsed"
-          aria-label="Toggle navigation"
-          (click)="isCollapsed = !isCollapsed">
+  <button class="navbar-toggler collapsed" type="button" (click)="isCollapsed = !isCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" [collapse]="isCollapsed" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+  <div  class="collapse navbar-collapse" [collapse]=isCollapsed>
+    <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/blog" routerLinkActive="active">BLOG</a>
       </li>
