--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -6,7 +6,7 @@ nav {
   border-image-width: 25px;
   padding:0 10px 0 0;
   background-color: white;
-  height:60px;
+  min-height:60px;
   .logo-icon {
     background-image: url('../../assets/TAODress.png');
     background-repeat: no-repeat;
@@ -73,8 +73,8 @@ nav {
         visibility: visible;
       }
       .user-avatar {
-        width: 30px;
-        height: 30px;
+        width: 35px;
+        height: 35px;
         overflow: hidden;
         border-radius: 50%;
         object-fit: cover;
