--- a/src/app/auth/login-modal/login-modal.component.html
+++ b/src/app/auth/login-modal/login-modal.component.html
@@ -40,7 +40,7 @@
     <div *ngIf="checkErrors()" class="validate-error">{{ checkErrors() }}</div>
     <button type="submit" [disabled]="!appForm.valid" class="btn btn-primary">Login</button>
     <div class="separate">OR</div>
-    <a href="http://localhost:3000/auth/google" class="social-auth-link">
+    <a (click)="goToGoogleAuth()" class="social-auth-link">
       <img src="/assets/google.svg" alt="" class="social-auth-icon">
       <span class="social-auth-text">Log in with Google</span>
     </a>
