--- a/src/app/auth/login-modal/login-modal.component.scss
+++ b/src/app/auth/login-modal/login-modal.component.scss
@@ -56,6 +56,7 @@ form {
     justify-content: center;
     border-radius: 7px;
     margin: 0 auto;
+    cursor: pointer;
     .social-auth-icon {
       width: 15px;
       height: 15px;
