--- a/src/app/auth/login-modal/login-modal.component.scss
+++ b/src/app/auth/login-modal/login-modal.component.scss
@@ -43,6 +43,9 @@ form {
       box-shadow: 0 0 0 1px rgb(77, 144, 254);
     }
   }
+  .btn {
+    position: relative;
+  }
   .separate {
     margin: 0 0 15px;
     text-align: center;
