--- a/src/app/UI/button/button.component.html
+++ b/src/app/UI/button/button.component.html
@@ -1,3 +1,3 @@
 <button class="my-button" (click)="onClickButton($event)" [disabled]="disabled">
-  <span>{{text}}</span>
+  <app-loader></app-loader><span>{{text}}</span>
 </button>
