--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -73,6 +73,7 @@
   .profile-wrapper {
     flex-direction: column;
     justify-content: center;
+    margin: 40px 0 30px;
     .image-wrapper {
       flex:1;
       margin: 0 auto;
