--- a/src/app/shop/wishlist/wishlist.component.scss
+++ b/src/app/shop/wishlist/wishlist.component.scss
@@ -50,3 +50,27 @@
   left: 50%;
 }
 
+@media screen and (max-width:991px){
+  .wishlist-container {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .wishlist-container {
+    padding: 30px 0 30px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .wishlist-container {
+    .wishlist-header {
+      .amount {
+        width: 100%;
+      }
+      .price {
+        display: none;
+      }
+    }
+  }
+}
