Make products page responsive, show loaders in admin page.

--- a/src/app/admin/products/admin-product-details/admin-product-details.component.scss
+++ b/src/app/admin/products/admin-product-details/admin-product-details.component.scss
@@ -1,5 +1,7 @@
 .product-details-wrapper {
   width: calc(100% - 10px);
+  min-height: 50vh;
+  position: relative;
   table {
     display: table;
     border-collapse: collapse;
