--- a/src/app/shop/wishlist/wishlist.component.html
+++ b/src/app/shop/wishlist/wishlist.component.html
@@ -10,7 +10,7 @@
   </div>
   <ng-container *ngIf="wishlist.length">
     <header class="wishlist-header">
-      <div class="amount">{{totalNumOfProductsInWishlist}} PRODUCTS</div>
+      <div class="amount">{{totalNumOfProductsInWishlist}} PRODUCT(S)</div>
       <div class="text price">Price</div>
     </header>
     <app-wishlist-item *ngFor="let wishlistItem of wishlist"
