--- a/src/app/admin/products/admin-product-details/admin-product-details.component.html
+++ b/src/app/admin/products/admin-product-details/admin-product-details.component.html
@@ -1,42 +1,45 @@
-<div *ngIf="product" class="box-with-shadow product-details-wrapper">
-  <table>
-    <tr>
-      <th>Brand</th>
-      <td>{{product.brand}}</td>
-    </tr>
-    <tr>
-      <th>Category</th>
-      <td>{{product.subcategory.category.name}}</td>
-    </tr>
-    <tr>
-      <th>Subcategory</th>
-      <td>{{product.subcategory.name}}</td>
-    </tr>
-    <tr>
-      <th>Description</th>
-      <td>{{product.description}}</td>
-    </tr>
-    <tr>
-    <tr>
-      <th>Material</th>
-      <td>{{product.material}}</td>
-    </tr>
-    <tr>
-      <th>Price</th>
-      <td>${{product.price}}</td>
-    </tr>
-    <tr>
-      <th>Price with Discount</th>
-      <td><span *ngIf="product.discount">${{product.discount}}</span><span *ngIf="!product.discount">-</span></td>
-    </tr>
-  </table>
-  <div class="btn-container">
-    <div class="btn-wrapper">
-      <app-button [text]="'Change'" routerLink="./change"></app-button>
+<div class="box-with-shadow product-details-wrapper">
+  <app-spinner *ngIf="loading"></app-spinner>
+  <ng-container *ngIf="!loading">
+    <table>
+      <tr>
+        <th>Brand</th>
+        <td>{{product.brand}}</td>
+      </tr>
+      <tr>
+        <th>Category</th>
+        <td>{{product.subcategory.category.name}}</td>
+      </tr>
+      <tr>
+        <th>Subcategory</th>
+        <td>{{product.subcategory.name}}</td>
+      </tr>
+      <tr>
+        <th>Description</th>
+        <td>{{product.description}}</td>
+      </tr>
+      <tr>
+      <tr>
+        <th>Material</th>
+        <td>{{product.material}}</td>
+      </tr>
+      <tr>
+        <th>Price</th>
+        <td>${{product.price}}</td>
+      </tr>
+      <tr>
+        <th>Price with Discount</th>
+        <td><span *ngIf="product.discount">${{product.discount}}</span><span *ngIf="!product.discount">-</span></td>
+      </tr>
+    </table>
+    <div class="btn-container">
+      <div class="btn-wrapper">
+        <app-button [text]="'Change'" routerLink="./change"></app-button>
+      </div>
+      <div class="btn-wrapper">
+        <app-button [text]="'Delete'" routerLink="./delete"></app-button>
+      </div>
     </div>
-    <div class="btn-wrapper">
-      <app-button [text]="'Delete'" routerLink="./delete"></app-button>
-    </div>
-  </div>
+  </ng-container>
 </div>
 
