--- a/src/app/admin/products/admin-products/admin-products.component.html
+++ b/src/app/admin/products/admin-products/admin-products.component.html
@@ -1,21 +1,22 @@
 <div class="products-box box-with-shadow">
-  <table>
-    <tr>
-      <th class="image">Image</th>
-      <th class="brand">Brand</th>
-      <th class="category">Category</th>
-      <th class="subcategory">Subcategory</th>
-      <th class="price">Price</th>
-      <th class="discount">With Discount</th>
-      <th class="quantity">Quantity</th>
-    </tr>
-    <ng-container *ngIf="products.length">
-      <tr app-admin-product *ngFor="let product of products | paginate: { itemsPerPage: itemsPerPage, currentPage: page, totalItems: totalAmount }"
-          [product]="product"
-          (click)="openProductDetails(product.id)"></tr>
-    </ng-container>
-  </table>
-  <pagination-controls *ngIf="totalAmountStockProducts > itemsPerPage" (pageChange)="pageChanged($event)"></pagination-controls>
-  <a class="btn-add" (click)="onEditProduct()"><i class="material-icons">add</i></a>
+    <table>
+      <tr>
+        <th class="image">Image</th>
+        <th class="brand">Brand</th>
+        <th class="category">Category</th>
+        <th class="subcategory">Subcategory</th>
+        <th class="price">Price</th>
+        <th class="discount">With Discount</th>
+        <th class="quantity">Quantity</th>
+      </tr>
+      <ng-container *ngIf="products.length && !loading">
+        <tr app-admin-product *ngFor="let product of products | paginate: { itemsPerPage: itemsPerPage, currentPage: page, totalItems: totalAmount }"
+            [product]="product"
+            (click)="openProductDetails(product.id)"></tr>
+      </ng-container>
+      <app-spinner *ngIf="loading"></app-spinner>
+    </table>
+    <pagination-controls *ngIf="totalAmountStockProducts > itemsPerPage" (pageChange)="pageChanged($event)"></pagination-controls>
+    <a class="btn-add" (click)="onEditProduct()"><i class="material-icons">add</i></a>
 </div>
 
