--- a/src/app/admin/products/admin-products/admin-products.component.scss
+++ b/src/app/admin/products/admin-products/admin-products.component.scss
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   width: calc(100% - 10px);
+  position: relative;
   .btn-add {
     width: 56px;
     height: 56px;
