--- a/src/app/shop/products/filter/filter.component.scss
+++ b/src/app/shop/products/filter/filter.component.scss
@@ -3,7 +3,7 @@
 .filters {
   width: 200px;
   font-family: 'goudy_old_stylebold_italic';
-  margin-right: 50px;
+  margin-right: 20px;
   margin-bottom: 70px;
   .filter-title {
     border-bottom: 2px solid black;
@@ -35,6 +35,21 @@
       transform: translateY(-50%);
       width: 17px;
       height: 20px;
+    }
+  }
+}
+
+@media screen and (max-width:768px){
+  .filters {
+    margin-bottom: 25px;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width:450px){
+  .filters {
+    .container-search {
+      margin-top: 0;
     }
   }
 }
