Manage carts actions.

--- a/src/app/admin/products/edit-product/edit-product.component.html
+++ b/src/app/admin/products/edit-product/edit-product.component.html
@@ -77,7 +77,7 @@
 
   <button type="submit" class="my-button" (click)="onSubmit()" [disabled]="isFormInvalid()">
     <app-spinner *ngIf="loading"></app-spinner>
-    <span *ngIf="!loading">Save product</span>
+    <span>Save product</span>
   </button>
 </form>
 
