--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -16,9 +16,9 @@
     <div class="material"><span class="title">Material:</span> {{product.material}}</div>
     <div class="material">
       <span class="title size">Sizes:</span>
-      <ng-select [items]="sizes"
-                 [(ngModel)]="selectedSize" placeholder="Choose a size" class="custom">
-      </ng-select>
+      <ng-select [items]="availableSizes"
+         [(ngModel)]="selectedSize" name="size" placeholder="Choose a size" class="custom">
+    </ng-select>
     </div>
   </div>
   <div class="sidebar-wrapper">
