--- a/src/app/shop/products/products.component.scss
+++ b/src/app/shop/products/products.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   margin-top: 50px;
+  padding: 0 10px;
   .content-wrapper {
     width: calc(100% - 200px);
     text-align: center;
