--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
@@ -10,6 +10,7 @@
     height: 130px;
     cursor: pointer;
     position: relative;
+    flex-shrink: 0;
     .wishlist-img {
       width: 100%;
       height: 100%;
@@ -34,7 +35,7 @@
   }
   .content-box {
     display: flex;
-    width: calc(100% - 80px);
+    width: calc(100% - 110px);
     justify-content: center;
     .block {
       &:nth-child(1) {
@@ -104,6 +105,15 @@
     }
   }
 }
+/deep/ .modal.show .modal-sm {
+  top: 70px;
+}
+/deep/ .confirm-body {
+  .cta {
+    display: inline-block;
+    margin: 0 7px;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .wishlist-item-container {
@@ -141,12 +151,17 @@
 
 @media screen and (max-width: 450px) {
   .wishlist-item-container {
+    .img-box {
+      width: 90px;
+      height: 110px;
+    }
     .content-box {
       flex-direction: column;
       justify-content: flex-start;
+      width: 100%;
       .block {
         &:nth-child(1) {
-          width: 100%;
+          width: calc(100% - 20px);
         }
         &:nth-child(2) {
           margin-left: 20px;
