--- a/src/app/shop/wishlist/wishlist.component.scss
+++ b/src/app/shop/wishlist/wishlist.component.scss
@@ -64,8 +64,10 @@
 
 @media screen and (max-width: 450px) {
   .wishlist-container {
+    width: 100%;
     .wishlist-header {
       .amount {
+        text-align: center;
         width: 100%;
       }
       .price {
