--- a/src/app/shop/cart/cart-list/cart-list.component.scss
+++ b/src/app/shop/cart/cart-list/cart-list.component.scss
@@ -60,17 +60,13 @@
     background: #F4F0ED;
     margin-bottom: 15px;
     border-radius: 10px;
-    padding: 10px 10px 0 80px;
+    padding: 5px;
     h5 {
-      width: 25%;
-      text-align: center;
       font-family: 'goudy_old_stylebold';
       font-size: 22px;
       line-height: 22px;
-    }
-    strong {
-      width: 25%;
-      text-align: right;
+      margin-right: 50px;
+      margin-bottom: 0;
     }
   }
   .button-wrapper {
@@ -80,3 +76,33 @@
   }
 }
 
+@media screen and (max-width:991px){
+  .cart-container {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width:576px){
+  .cart-container {
+    padding-top: 30px;
+    padding-bottom: 0;
+    .cart-header {
+      .amount {
+        width: 100%;
+        text-align: center;
+      }
+      .qty {
+        display: none;
+      }
+      .price {
+        display: none;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .cart-container {
+    width: 100%;
+  }
+}
