--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
@@ -6,7 +6,7 @@
   <div class="content-box">
     <div class="block">
       <div class="title brand">{{wishlistItem.brand}}</div>
-      <div class="subcategory">{{wishlistItem.category}}, {{wishlistItem.subcategory}}</div>
+      <div class="subcategory">{{wishlistItem.category}}, {{wishlistItem.subcategory.name}}</div>
     </div>
     <div class="block">
       <div class="price-wrapper">
@@ -18,14 +18,14 @@
           <img src="/assets/shop/eye.svg" alt="" class="icon">
           <div class="text add-text">Watch Details</div>
         </div>
-        <div class="additional-block" #addBlock (click)="addProductToCart()">
+        <div class="additional-block cart-block" #addBlock (click)="addProductToCart()">
           <ng-container *ngIf="!addToCartWasClicked">
-            <img src="/assets/shop/bag.svg" alt="" class="icon">
+            <img src="/assets/shop/bag.svg" alt="" class="icon" (click)="openSelect($event)">
             <div class="text">Add to Cart</div>
           </ng-container>
-          <!--<ng-select *ngIf="addToCartWasClicked" [items]="sizes"-->
-                     <!--[(ngModel)]="selectedSize" placeholder="Choose a size" class="custom">-->
-          <!--</ng-select>-->
+          <ng-select (open)="openSelect($event)" [items]="availableSizes" *ngIf="addToCartWasClicked"
+             [(ngModel)]="selectedSize" name="size" placeholder="Choose a size" class="custom">
+          </ng-select>
         </div>
         <div class="additional-block delete-block" #deleteBlock (click)="openModal(modalDialog)">
           <img src="/assets/waste-bin.svg" alt="" class="icon">
