--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
@@ -70,6 +70,9 @@
             opacity: 0;
             transition: opacity 0.5s ease;
             position: relative;
+            .wrapper {
+              display: flex;
+            }
             .icon {
               width: 20px;
               height: 20px;
