--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
@@ -23,7 +23,7 @@
             <img src="/assets/shop/bag.svg" alt="" class="icon">
             <div class="text">Add to Cart</div>
           </div>
-          <ng-select (open)="chooseSize($event)" (change)="addToCart($event)" [items]="availableSizes" *ngIf="addToCartWasClicked"
+          <ng-select [searchable]="false" (open)="chooseSize($event)" (change)="addToCart($event)" [items]="availableSizes" *ngIf="addToCartWasClicked"
              [(ngModel)]="selectedSize" name="size" placeholder="Choose a size" class="custom">
           </ng-select>
         </div>
