--- a/src/app/shop/wishlist/wishlist.component.scss
+++ b/src/app/shop/wishlist/wishlist.component.scss
@@ -48,7 +48,7 @@
   position: absolute;
   top: 70px;
   left: 50%;
-  transform: translateY(-50%);
+  transform: translateX(-50%);
 }
 
 @media screen and (max-width:991px){
