--- a/src/app/shop/orders/order-form/order-form.component.html
+++ b/src/app/shop/orders/order-form/order-form.component.html
@@ -6,7 +6,7 @@
     <label for="first_name">
       <strong>First name</strong>
     </label>
-    <input type="text" class="form-control" name="first_name" id="first_name" [(ngModel)]="orderForm.first_name">
+    <input type="text" class="form-control" name="first_name" id="first_name" [(ngModel)]="orderForm.firstName">
   </div>
   <div class="form-group">
     <label for="surname">
@@ -24,7 +24,7 @@
     <label for="post_code">
       <strong>Postal code</strong>
     </label>
-    <input type="number" class="form-control" name="post_code" id="post_code" [(ngModel)]="orderForm.post_code">
+    <input type="number" class="form-control" name="post_code" id="post_code" [(ngModel)]="orderForm.postCode">
   </div>
   <div class="form-group">
     <label for="country">
